Fixed image rotation issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2085,6 +2085,9 @@ input, select, textarea {
 		width: 50%;
 		padding: 5px;
 		margin-bottom: 175px;
+		-ms-transform: rotate(270deg);
+    	-webkit-transform: rotate(270deg);
+    	-moz-object-transform: rotate(270deg);
 		transform: rotate(270deg);
 		position: relative;
 		top: 75px;
